Check mCurrentItem validity before emitting any signal with it

Fix the rare case where item is reset while the thumbnail is being generated
by the thumbnail thread.

BUG: 302136
FIXED-IN: 2.9.1